[tool.poetry]
name = "marketplace"
version = "0.1.0"
description = ""
authors = ["Lizaveta Yurashevich <lizaveta.yurashevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
